Port to node js12 (#47)
* port to nodejs 12 api

* add support for nodejs 13 in .travis.yml

* update appveyor

* remove obsolete version of electron

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,25 +42,28 @@ environment:
     - nodejs_version: 10
       platform: x64
 
+    - nodejs_version: 12
+      platform: x64
+
     # - electron_version: "1.4.14"
     #   nodejs_version: 6
     #   platform: x86
 
-    - electron_version: "1.4.14"
-      nodejs_version: 6
-      platform: x64
+    # - electron_version: "1.4.14"
+    #   nodejs_version: 6
+    #   platform: x64
 
     # - electron_version: "1.6.10"
     #   nodejs_version: 6
     #   platform: x86
 
-    - electron_version: "1.6.10"
-      nodejs_version: 6
-      platform: x64
-
     # - electron_version: "1.6.10"
-    #   nodejs_version: 7.4
-    #   platform: x86
+    #   nodejs_version: 6
+    #   platform: x64
+
+    - electron_version: "7.0.0"
+      nodejs_version: 12
+      platform: x64
 
 
 # clone directory
