--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
-dist: trusty
+dist: bionic // 18.04
 os:
   - linux
   - osx
@@ -18,6 +18,9 @@ env:
   - TRAVIS_NODE_VERSION="8"
   - TRAVIS_NODE_VERSION="9"
   - TRAVIS_NODE_VERSION="10"
+  - TRAVIS_NODE_VERSION="11"
+  - TRAVIS_NODE_VERSION="12"
+  - TRAVIS_NODE_VERSION="13"
 
 matrix:
   exclude:
@@ -40,7 +43,7 @@ addons:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - g++-4.8
+    - g++
     - libtbb2
 
 before_install:
@@ -72,7 +75,7 @@ before_install:
 - npm --version
 
 # use g++ on linux
-- if [[ $TRAVIS_OS_NAME == "linux" ]]; then export CXX=g++-4.8; fi
+- if [[ $TRAVIS_OS_NAME == "linux" ]]; then export CXX=g++; fi
 - $CXX --version
 - npm install -g node-pre-gyp-github node-pre-gyp
 
