--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-occ",
-  "version": "0.3.0",
+  "version": "0.4.0-0",
   "description": "OpenCascade OCCT Wrapper for Node js",
   "preferGlobal": "true",
   "dependencies": {
