--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "progress": "~2.0.3"
   },
   "devDependencies": {
-    "aws-sdk": "2.x",
+    "aws-sdk": "^2.562.0",
     "electron-rebuild": "^1.8.6",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
@@ -46,7 +46,6 @@
     "url": "https://github.com/openwebcad/node-occ.git"
   },
   "scripts": {
-    "preinstall": "node build.js",
     "install": "node-pre-gyp install --fallback-to-build",
     "test": "mocha -R spec",
     "lint": "eslint lib test bin",
