--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-occ",
   "version": "0.4.0-1",
   "description": "OpenCascade OCCT Wrapper for Node js",
-  "preferGlobal": "true",
+  "preferGlobal": true,
   "dependencies": {
     "async": "^3.1.0",
     "colors": "*",
