--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,12 @@ addons:
     packages:
     - g++
     - libtbb2
-    - libtbb
+    - libtbb-dev
 
 before_install:
+# 
+- sudo apt-get install -y libtbb2 libtbb-dev
+#
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi   
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install tbb; fi
 
