--- a/.travis.yml
+++ b/.travis.yml
@@ -49,9 +49,9 @@ addons:
 
 before_install:
 # 
-- sudo apt-get install -y libtbb2 libtbb-dev
+- if [[ $TRAVIS_OS_NAME == "linux" ]]; then sudo apt-get install -y libtbb2 libtbb-dev; fi
 #
-- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update          ; fi   
+- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update     ; fi   
 - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install tbb; fi
 
 # reinstall latest nvm
