update packages and add nodejs 14.0

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,6 +44,9 @@ environment:
 
     - nodejs_version: 12
       platform: x64
+    
+    - nodejs_version: 14
+      platform: x64
 
     # - electron_version: "1.4.14"
     #   nodejs_version: 6
