--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
   - TRAVIS_NODE_VERSION="11"
   - TRAVIS_NODE_VERSION="12"
   - TRAVIS_NODE_VERSION="13"
+  - TRAVIS_NODE_VERSION="14"
 
 matrix:
   exclude:
