--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,10 +64,17 @@ environment:
     #   nodejs_version: 6
     #   platform: x64
 
-    - electron_version: "7.0.0"
+    - electron_version: "7.3.2"
+      nodejs_version: 12
+      platform: x64
+    
+    - electron_version: "8.5.0"
       nodejs_version: 12
       platform: x64
 
+    - electron_version: "9.2.0"
+      nodejs_version: 12
+      platform: x64
 
 # clone directory
 clone_folder: c:\projects\node-occ
