downgrade to mocha@7 as mocha@8 doesn't support old version of node anymore

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -110,7 +110,7 @@ install:
     true;
 
 
-- cmd: npm install mocha node-pre-gyp-github -g
+- cmd: npm install mocha@7 node-pre-gyp-github -g
 - cmd: setenv.bat 64
 - cmd: build.bat %PLATFORM%
 
