--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "progress": "~2.0.3"
   },
   "devDependencies": {
+    "@types/mocha": "^7.0.2",
     "aws-sdk": "^2.731.0",
     "electron-rebuild": "^1.11.0",
     "eslint": "^7.6.0",
-    "eslint-utils": "^2.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-require-path-exists": "^1.1.9",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^8.1.1",
+    "eslint-utils": "^2.1.0",
+    "mocha": "^7.2.0",
     "should": "~13.2.3"
   },
   "main": "index",
