adapt build to new electron version

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ os:
 
 env:
   matrix:
-  - TRAVIS_NODE_VERSION="6"
+  # - TRAVIS_NODE_VERSION="6"
   #- TRAVIS_NODE_VERSION="6" ARCH="x86"
-  - TRAVIS_NODE_VERSION="7"
+  # - TRAVIS_NODE_VERSION="7"
   #- TRAVIS_NODE_VERSION="7" ARCH="x86"
   #- TRAVIS_ELECTRON_VERSION="1.4.14" TRAVIS_NODE_VERSION="6"
   - TRAVIS_NODE_VERSION="8"
