--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,22 +21,19 @@ environment:
   VisualStudioVersion: "12"
   matrix:
 
-    # - nodejs_version: 6
-    #   platform: x86
-
-    - nodejs_version: 6
+    - electron_version: "7.3.2"
+      nodejs_version: 12
       platform: x64
+    
+    # - electron_version: "8.5.0" // not working yet =< GetBackingStore missing
+    #   nodejs_version: 12
+    #   platform: x64
 
-    # - nodejs_version: 7
-    #   platform: x86
-
-    - nodejs_version: 7
-      platform: x64
-
+    # - electron_version: "9.2.0"
+    #   nodejs_version: 12
+    #   platform: x64
+    
     - nodejs_version: 8
-      platform: x64
-
-    - nodejs_version: 9
       platform: x64
   
     - nodejs_version: 10
@@ -64,17 +61,7 @@ environment:
     #   nodejs_version: 6
     #   platform: x64
 
-    - electron_version: "7.3.2"
-      nodejs_version: 12
-      platform: x64
-    
-    - electron_version: "8.5.0"
-      nodejs_version: 12
-      platform: x64
 
-    - electron_version: "9.2.0"
-      nodejs_version: 12
-      platform: x64
 
 # clone directory
 clone_folder: c:\projects\node-occ
