--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "async": "^3.2.0",
     "colors": "*",
+    "electron": "^7.3.2",
+    "electron-mocha": "^7.0.0",
     "gettemporaryfilepath": "1.0.1",
     "nan": "^2.14.1",
     "node-pre-gyp": "^0.15.0",
