--- a/appveyor.yml
+++ b/appveyor.yml
@@ -97,7 +97,7 @@ install:
     true;
 
 
-- cmd: npm install mocha@7 node-pre-gyp-github -g
+- cmd: npm install mocha@7 https://github.com/OpenWebCAD/node-pre-gyp-github.git -g
 - cmd: setenv.bat 64
 - cmd: build.bat %PLATFORM%
 
