--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,14 @@ jobs:
       with:
         path: ~/.pnpm-store
         key: ${{ runner.os }}-pnpm-store
+
     - run: pip3 install conan
+    - run: conan install .
+    - run: git clone https://github.com/czoido/conan-gyp-generator
+    - run: cd conan-gyp-generator
+    - run: conan config install gyp-generator.py -tf generators
+    - run: cd ..
+
     - run: npm install -g pnpm@6
     - run: pnpm recursive install
     - run: pnpm run build --if-present
@@ -41,7 +48,14 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    
     - run: pip3 install conan
+    - run: conan install .
+    - run: git clone https://github.com/czoido/conan-gyp-generator
+    - run: cd conan-gyp-generator
+    - run: conan config install gyp-generator.py -tf generators
+    - run: cd ..
+
     - run: npm install -g pnpm@6
     - uses: actions/cache@v2
       with:
