--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "colors": "*",
     "gettemporaryfilepath": "1.0.1",
     "nan": "^2.16.0",
-    "node-pre-gyp": "^0.15.0",
+    "@mapbox/node-pre-gyp": "^1.0.10",
     "pace": "~0.0.4",
     "progress": "~2.0.3",
     "source-map-support": "^0.5.21"
@@ -18,7 +18,6 @@
     "@types/async": "^3.2.20",
     "@types/mocha": "^9.1.1",
     "@types/node": "^20.2.3",
-    "aws-sdk": "^2.1209.0",
     "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -55,7 +54,7 @@
   },
   "scripts": {
     "build": "tsc ",
-    "install": "node-pre-gyp install --fallback-to-build",
+    "install": "./node_modules/.bin/node-pre-gyp install --fallback-to-build",
     "test": "mocha test/*.ts",
     "lint": "eslint lib test bin",
     "doc": "grunt doc",
