--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
-    "@types/should": "^13.0.0",
     "@types/async": "^3.2.20",
     "@types/mocha": "^9.1.1",
     "@types/node": "^20.2.3",
+    "@types/should": "^13.0.0",
     "aws-sdk": "^2.1396.0",
     "eslint": "^8.23.0",
     "eslint-config-standard": "^17.0.0",
@@ -26,6 +26,7 @@
     "eslint-plugin-standard": "^4.1.0",
     "eslint-utils": "^3.0.0",
     "mocha": "^10.0.0",
+    "prettier": "^3.0.0",
     "should": "~13.2.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -57,6 +58,7 @@
     "test": "mocha test/*.ts",
     "lint": "eslint lib test bin",
     "doc": "grunt doc",
+    "prettier": "prettier -w lib/*.ts test/*.ts",
     "postinstall": "node post-install.js"
   },
   "binary": {
